welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:6: error: ')' expected but 'if' found.
if (estSurBiscuit()) {
^