welcome.lessons.welcome.variables.RunFour.scala.code
n=4
while (
while (!estSurBiscuit()) {
	avance();
}
if (estSurBiscuit()) {
	n:=n+1
}
